# vitis_mcp

./: .gitignore  README.md  README_zh.md  claude_desktop_config.json  pyproject.toml
src/vitis_mcp/: __init__.py  __main__.py  config.py  python_utils.py  server.py  session.py
src/vitis_mcp/tools/: app_tools.py  bsp_tools.py  platform_tools.py  session_tools.py  workspace_tools.py  xsdb_tools.py
