[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitis-mcp"
version = "0.1.0"
description = "MCP server for Xilinx Vitis Unified IDE automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
vitis-mcp = "vitis_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vitis_mcp"]
